--- a/CSS/02_Aufgabe WH CSS 1/index.html
+++ b/CSS/02_Aufgabe WH CSS 1/index.html
@@ -40,6 +40,7 @@
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
+            margin: 40px;
             margin-top: 100px;
         }
         .box {
