--- a/CSS/05_Aufgabe WH CSS 4/index.html
+++ b/CSS/05_Aufgabe WH CSS 4/index.html
@@ -9,22 +9,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="upperLeftBox">
+        <div class="centeredBlueBox"></div>
+        <div class="rightBottomPurpleBox"></div>
+    </div>
     <div class="header">
         <div class="greenBox">
-            <div class="greenCenterBox"></div>
-            <div class="greenCenterBox"></div>
-            <div class="greenCenterBox"></div>
+            <div class="orangeBox"></div>
         </div>
         <div class="greenBox">
-            <div class="greenCenterBox"></div>
+            <div class="orangeBox"></div>
         </div>
         <div class="greenBox">
-            <div class="greenCenterBox"></div>
+            <div class="orangeBox"></div>
         </div>
-    </div>
-    <div class="rightBottom">
-        <div class="upBlackBox"></div>
-        <div class="downBlackBox"></div>
     </div>
 </body>
 </html>
