orf exercise added

--- a/CSS/07_Aufgabe ORF/index.html
+++ b/CSS/07_Aufgabe ORF/index.html
@@ -10,19 +10,33 @@
 </head>
 <body>
     <div class="navigation">
-
+        <ul class="navigationList">
+            <li>Fernsehen</li>
+            <li>TVthek</li>
+            <li>Radiothek</li>
+            <li>Debatte</li>
+            <li>Österreich</li>
+            <li>Wetter</li>
+            <li>Sport</li>
+            <li>News</li>
+        </ul>
+        <p class="navigationText">Orf.at im Überblick</p>
     </div>
-    <div class="logo">
-
-    </div>
+    <div class="logo">vorarlberg</div>
     <div class="media">
-
+        <ul class="mediaList">
+            <li>News</li>
+            <li>Radio</li>
+            <li>Heute</li>
+            <li>ORF</li>
+            <li>Ganz Österreich</li>
+        </ul>
+        <div class="mediaSymbol"></div>
     </div>
-    <div class="textImage">
-
-    </div>
+    <div class="textImage"></div>
     <div class="content">
-        
+        <h1>Überschrift eines tollen Artikels</h1>
+        <p>Inhalt</p>
     </div>
 </body>
 </html>
