orf exercise added

--- a/CSS/07_Aufgabe ORF/index.html
+++ b/CSS/07_Aufgabe ORF/index.html
@@ -31,12 +31,13 @@
             <li>ORF</li>
             <li>Ganz Österreich</li>
         </ul>
-        <div class="mediaSymbol"></div>
+        <img src="bellSymbol.jpg" class="mediaSymbol"></img>
     </div>
     <div class="textImage"></div>
     <div class="content">
+        <div class="textTag">Coronavirus</div>
         <h1>Überschrift eines tollen Artikels</h1>
-        <p>Inhalt</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate ipsam magni facilis quae provident voluptatibus eum sed nihil doloribus maiores culpa, dicta in error repudiandae optio architecto atque, consequuntur deleniti.</p>
     </div>
 </body>
 </html>
