todo extended with classes

--- a/JS_Basics/A11_ToDo-List/index.html
+++ b/JS_Basics/A11_ToDo-List/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1>ToDo-List</h1>
     <div class="createElement">
-        <input type="text" id="saveInput"/>
+        <input type="text" id="saveInput" placeholder="Enter task name"/>
+        <input type="text" id="saveResponsible" placeholder="Enter person who is responsible"/>
         <button id="storeTodo">Save element</button>
     </div>
     <div class="deleteElement">
