todo get with rest api done

--- a/JS_Basics/A12_ToDo_Rest/index.html
+++ b/JS_Basics/A12_ToDo_Rest/index.html
@@ -8,6 +8,9 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <button id="loadTodo">Lade Todos</button>
+    <ul id="todoList">
+        
+    </ul>
 </body>
 </html>
