adventure of code

--- a/JS_Extended/A06_Football_RestAPI/index.html
+++ b/JS_Extended/A06_Football_RestAPI/index.html
@@ -10,7 +10,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1 class="title">Football Teams of 2002</h1>
+    <div class="titleDiv">
+        <h1 class="title">Football Teams of 2002</h1>
+    </div>
     <div class="teamListDiv">
         <ul id="teamList">
             
